monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4047/A4047e.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4047;

grammar A4047e {

  D;

  interface A = D*;

  AImpl implements A = D;

}